--- a/index.html
+++ b/index.html
@@ -1,272 +1,253 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <title>Miranda Flow Boutique</title>
+<meta charset="UTF-8">
+<title>Miranda Flow Boutique</title>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
 
-  <style>
-    *{margin:0;padding:0;box-sizing:border-box}
-    html{scroll-behavior:smooth}
-    body{
-      font-family:'Inter',system-ui;
-      background:#000;
-      color:#fff;
-      overflow-x:hidden;
-    }
+<style>
+*{margin:0;padding:0;box-sizing:border-box}
+body{
+  font-family:'Inter',system-ui;
+  background:#000;
+  color:#fff;
+  overflow-x:hidden;
+}
 
-    /* ===== LOGO DE FONDO (VISIBLE + LATIENDO) ===== */
-    .bg-logo{
-      position:fixed;
-      inset:-20%;
-      background:url('logo.jpg') center/480px no-repeat;
-      opacity:.28;
-      filter:blur(3px);
-      animation:logoPulse 6s ease-in-out infinite;
-      z-index:-2;
-      pointer-events:none;
-    }
+/* ===== LOGO FONDO ===== */
+.bg-logo{
+  position:fixed;
+  inset:-20%;
+  background:url('logo.jpg') center/460px no-repeat;
+  opacity:.32;
+  filter:blur(2px);
+  animation:pulse 6s ease-in-out infinite;
+  z-index:-2;
+}
+@keyframes pulse{
+  0%,100%{transform:scale(1)}
+  50%{transform:scale(1.06)}
+}
 
-    @keyframes logoPulse{
-      0%,100%{transform:scale(1)}
-      50%{transform:scale(1.06)}
-    }
+/* ===== HEADER ===== */
+header{
+  position:sticky;
+  top:0;
+  z-index:50;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding:18px 22px;
+  background:rgba(0,0,0,.55);
+  backdrop-filter:blur(16px);
+}
+.brand{
+  display:flex;
+  align-items:center;
+  gap:12px;
+  text-transform:uppercase;
+  letter-spacing:.18em;
+  font-size:12px;
+  font-weight:600;
+}
+.brand img{
+  width:34px;
+  height:34px;
+  border-radius:8px;
+}
+nav{
+  display:flex;
+  gap:26px;
+  font-size:13px;
+  letter-spacing:.14em;
+}
+nav a{
+  color:#fff;
+  text-decoration:none;
+  opacity:.75;
+}
+nav a:hover{opacity:1}
 
-    /* ===== HEADER ===== */
-    header{
-      position:sticky;
-      top:0;
-      z-index:50;
-      display:flex;
-      justify-content:space-between;
-      align-items:center;
-      padding:18px 22px;
-      background:rgba(0,0,0,.55);
-      backdrop-filter:blur(18px);
-    }
+/* ===== CARRITO ===== */
+.cart{
+  position:fixed;
+  top:120px;
+  right:22px;
+  width:34px;
+  height:34px;
+  border-radius:50%;
+  background:rgba(255,255,255,.14);
+  border:1px solid rgba(255,255,255,.25);
+  backdrop-filter:blur(12px);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-size:14px;
+  z-index:80;
+  text-decoration:none;
+  color:#fff;
+}
 
-    .brand{
-      display:flex;
-      align-items:center;
-      gap:12px;
-      letter-spacing:.18em;
-      font-size:12px;
-      text-transform:uppercase;
-      font-weight:600;
-      opacity:.9;
-    }
+/* ===== HERO ===== */
+.hero{
+  min-height:88vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  padding:40px 20px;
+}
+.hero-card{
+  background:rgba(255,255,255,.06);
+  backdrop-filter:blur(22px);
+  border-radius:26px;
+  padding:40px 28px;
+  max-width:420px;
+  width:100%;
+  box-shadow:0 0 60px rgba(0,0,0,.6);
+}
+.hero-card h1{
+  font-size:42px;
+  font-weight:800;
+  margin-bottom:16px;
+}
+.hero-card p{
+  opacity:.75;
+  line-height:1.6;
+  margin-bottom:26px;
+}
+.btn{
+  width:100%;
+  padding:16px;
+  border-radius:14px;
+  text-align:center;
+  font-weight:600;
+  letter-spacing:.12em;
+  text-transform:uppercase;
+  font-size:12px;
+  margin-bottom:14px;
+  text-decoration:none;
+  display:block;
+}
+.btn-primary{
+  background:#fff;
+  color:#000;
+}
+.btn-outline{
+  border:1px solid rgba(255,255,255,.35);
+  color:#fff;
+}
 
-    .brand img{
-      width:34px;
-      height:34px;
-      border-radius:8px;
-    }
+/* ===== EXCLUSIVE ===== */
+.exclusive{
+  padding:100px 20px 140px;
+  max-width:1200px;
+  margin:auto;
+}
+.exclusive h2{
+  font-size:44px;
+  letter-spacing:.3em;
+  text-transform:uppercase;
+  margin-bottom:18px;
+}
+.exclusive p{
+  opacity:.6;
+  margin-bottom:50px;
+}
 
-    nav{
-      display:flex;
-      gap:26px;
-      font-size:13px;
-      text-transform:uppercase;
-      letter-spacing:.14em;
-    }
+/* GRID */
+.exclusive-grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+  gap:28px;
+}
+.ex-card{
+  position:relative;
+  border-radius:22px;
+  overflow:hidden;
+  transform:translateY(60px) scale(.94);
+  opacity:0;
+  animation:exEnter .9s ease forwards;
+}
+.ex-card:nth-child(2){animation-delay:.15s}
+.ex-card:nth-child(3){animation-delay:.3s}
+.ex-card:nth-child(4){animation-delay:.45s}
 
-    nav a{
-      color:#fff;
-      text-decoration:none;
-      opacity:.75;
-    }
+@keyframes exEnter{
+  to{opacity:1;transform:translateY(0) scale(1)}
+}
 
-    nav a:hover{opacity:1}
+.ex-card img{
+  width:100%;
+  height:100%;
+  object-fit:cover;
+  transition:transform .6s ease;
+}
+.ex-card:hover img{
+  transform:scale(1.08);
+}
 
-    /* ===== CARRITO ===== */
-    .cart{
-      position:fixed;
-      top:110px;
-      right:22px;
-      width:36px;
-      height:36px;
-      border-radius:50%;
-      background:rgba(255,255,255,.14);
-      border:1px solid rgba(255,255,255,.28);
-      backdrop-filter:blur(14px);
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      font-size:15px;
-      box-shadow:0 0 16px rgba(255,255,255,.18);
-      z-index:90;
-      text-decoration:none;
-      color:#fff;
-      touch-action:manipulation;
-      -webkit-tap-highlight-color:transparent;
-    }
-
-    .cart:active{transform:scale(.92)}
-
-    /* ===== HERO ===== */
-    .hero{
-      min-height:88vh;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      padding:40px 20px;
-    }
-
-    .hero-card{
-      background:rgba(255,255,255,.06);
-      backdrop-filter:blur(24px);
-      border-radius:26px;
-      padding:40px 28px;
-      max-width:420px;
-      width:100%;
-      box-shadow:0 0 60px rgba(0,0,0,.6);
-      animation:fadeUp .9s ease forwards;
-    }
-
-    @keyframes fadeUp{
-      from{opacity:0;transform:translateY(40px)}
-      to{opacity:1;transform:translateY(0)}
-    }
-
-    .hero-card h1{
-      font-size:42px;
-      font-weight:800;
-      line-height:1.05;
-      margin-bottom:16px;
-    }
-
-    .hero-card p{
-      opacity:.75;
-      line-height:1.6;
-      margin-bottom:26px;
-      font-size:15px;
-    }
-
-    .btn{
-      width:100%;
-      padding:16px;
-      border-radius:14px;
-      text-align:center;
-      font-weight:600;
-      letter-spacing:.12em;
-      text-transform:uppercase;
-      font-size:12px;
-      margin-bottom:14px;
-      cursor:pointer;
-      text-decoration:none;
-      display:block;
-    }
-
-    .btn-primary{
-      background:#fff;
-      color:#000;
-    }
-
-    .btn-outline{
-      border:1px solid rgba(255,255,255,.35);
-      color:#fff;
-      opacity:.9;
-    }
-
-    /* ===== EXCLUSIVE ===== */
-    .exclusive{
-      padding:90px 20px 120px;
-      max-width:1100px;
-      margin:auto;
-    }
-
-    .exclusive h2{
-      font-size:46px;
-      font-weight:800;
-      letter-spacing:.25em;
-      text-transform:uppercase;
-      margin-bottom:20px;
-    }
-
-    .exclusive p{
-      opacity:.6;
-      max-width:420px;
-    }
-
-    /* ===== PROMO ===== */
-    .promo{
-      position:fixed;
-      bottom:28px;
-      right:22px;
-      background:#fff;
-      color:#000;
-      padding:12px 18px;
-      border-radius:999px;
-      font-size:13px;
-      font-weight:600;
-      box-shadow:0 0 22px rgba(0,0,0,.6);
-      z-index:80;
-    }
-
-    /* ===== RESPONSIVE ===== */
-    @media(min-width:900px){
-      .hero-card{max-width:520px}
-      .hero-card h1{font-size:56px}
-    }
-  </style>
+/* ===== PROMO ===== */
+.promo{
+  position:fixed;
+  bottom:26px;
+  right:22px;
+  background:#fff;
+  color:#000;
+  padding:12px 18px;
+  border-radius:999px;
+  font-size:13px;
+  font-weight:600;
+  z-index:80;
+}
+</style>
 </head>
 
 <body>
 
-  <div class="bg-logo"></div>
+<div class="bg-logo"></div>
 
-  <!-- HEADER -->
-  <header>
-    <div class="brand">
-      <img src="logo.jpg" alt="Miranda Flow">
-      <span>Boutique · Miranda Flow</span>
-    </div>
+<header>
+  <div class="brand">
+    <img src="logo.jpg">
+    <span>Boutique · Miranda Flow</span>
+  </div>
+  <nav>
+    <a href="index.html">Inicio</a>
+    <a href="tienda.html">Tienda</a>
+  </nav>
+</header>
 
-    <nav>
-      <a href="index.html">Inicio</a>
-      <a href="tienda.html">Tienda</a>
-    </nav>
-  </header>
+<a href="carrito.html" class="cart">🛒</a>
 
-  <!-- CARRITO -->
-  <a href="carrito.html" class="cart" aria-label="Carrito">🛒</a>
-
-  <!-- HERO -->
-  <section class="hero">
-    <div class="hero-card">
-      <h1>Miranda<br>Flow</h1>
-
-      <p>
-        Prendas con presencia.<br>
-        Esto no es una tienda.<br>
-        Es la entrada a un ecosistema.
-      </p>
-
-      <a href="prendas.html" class="btn btn-primary">
-        Entrar a Prendas →
-      </a>
-
-      <a href="#exclusive" class="btn btn-outline">
-        Ver Exclusive ↓
-      </a>
-    </div>
-  </section>
-
-  <!-- EXCLUSIVE -->
-  <section id="exclusive" class="exclusive">
-    <h2>Exclusive</h2>
+<section class="hero">
+  <div class="hero-card">
+    <h1>Miranda<br>Flow</h1>
     <p>
-      Drop visual de muestra.  
-      Piezas selectas.  
-      Presencia antes que volumen.
+      Prendas con presencia.<br>
+      Esto no es una tienda.<br>
+      Es la entrada a un ecosistema.
     </p>
-  </section>
+    <a href="prendas.html" class="btn btn-primary">Entrar a Prendas →</a>
+    <a href="#exclusive" class="btn btn-outline">Ver Exclusive ↓</a>
+  </div>
+</section>
 
-  <!-- PROMO -->
-  <div class="promo">🎁 -20% HOY</div>
+<section id="exclusive" class="exclusive">
+  <h2>Exclusive</h2>
+  <p>Drop visual. Piezas de muestra. Presencia antes que volumen.</p>
+
+  <div class="exclusive-grid">
+    <div class="ex-card"><img src="exclusive-1.jpg"></div>
+    <div class="ex-card"><img src="exclusive-2.jpg"></div>
+    <div class="ex-card"><img src="exclusive-3.jpg"></div>
+    <div class="ex-card"><img src="exclusive-4.jpg"></div>
+  </div>
+</section>
+
+<div class="promo">🎁 -20% HOY</div>
 
 </body>
 </html>
