--- a/index.html
+++ b/index.html
@@ -20,29 +20,35 @@ body{
 /* ===== LOGO FONDO ===== */
 .bg-logo{
   position:fixed;
-  inset:-20%;
+  inset:-15%;
   background:url('logo.jpg') center/460px no-repeat;
-  opacity:.32;
-  filter:blur(2px);
-  animation:pulse 6s ease-in-out infinite;
+  opacity:.35;
+  filter:blur(1.5px);
+  animation:pulse 7s ease-in-out infinite;
   z-index:-2;
 }
 @keyframes pulse{
   0%,100%{transform:scale(1)}
-  50%{transform:scale(1.06)}
+  50%{transform:scale(1.05)}
 }
 
 /* ===== HEADER ===== */
 header{
-  position:sticky;
-  top:0;
+  position:fixed;
+  top:14px;
+  left:50%;
+  transform:translateX(-50%);
+  width:calc(100% - 28px);
+  max-width:1200px;
   z-index:50;
   display:flex;
   justify-content:space-between;
   align-items:center;
-  padding:18px 22px;
-  background:rgba(0,0,0,.55);
-  backdrop-filter:blur(16px);
+  padding:14px 22px;
+  border-radius:18px;
+  background:rgba(0,0,0,.45);
+  backdrop-filter:blur(20px);
+  box-shadow:0 10px 40px rgba(0,0,0,.6);
 }
 .brand{
   display:flex;
@@ -67,26 +73,29 @@ nav{
 nav a{
   color:#fff;
   text-decoration:none;
-  opacity:.75;
+  opacity:.7;
 }
 nav a:hover{opacity:1}
+
+/* ===== ESPACIO HEADER ===== */
+.spacer{height:110px}
 
 /* ===== CARRITO ===== */
 .cart{
   position:fixed;
-  top:120px;
-  right:22px;
-  width:34px;
-  height:34px;
+  top:180px;
+  right:20px;
+  width:30px;
+  height:30px;
   border-radius:50%;
   background:rgba(255,255,255,.14);
   border:1px solid rgba(255,255,255,.25);
-  backdrop-filter:blur(12px);
+  backdrop-filter:blur(14px);
   display:flex;
   align-items:center;
   justify-content:center;
-  font-size:14px;
-  z-index:80;
+  font-size:13px;
+  z-index:60;
   text-decoration:none;
   color:#fff;
 }
@@ -101,7 +110,7 @@ nav a:hover{opacity:1}
 }
 .hero-card{
   background:rgba(255,255,255,.06);
-  backdrop-filter:blur(22px);
+  backdrop-filter:blur(24px);
   border-radius:26px;
   padding:40px 28px;
   max-width:420px;
@@ -142,7 +151,7 @@ nav a:hover{opacity:1}
 
 /* ===== EXCLUSIVE ===== */
 .exclusive{
-  padding:100px 20px 140px;
+  padding:120px 20px 160px;
   max-width:1200px;
   margin:auto;
 }
@@ -154,7 +163,7 @@ nav a:hover{opacity:1}
 }
 .exclusive p{
   opacity:.6;
-  margin-bottom:50px;
+  margin-bottom:60px;
 }
 
 /* GRID */
@@ -167,18 +176,14 @@ nav a:hover{opacity:1}
   position:relative;
   border-radius:22px;
   overflow:hidden;
-  transform:translateY(60px) scale(.94);
   opacity:0;
-  animation:exEnter .9s ease forwards;
+  transform:translateY(80px) scale(.94);
+  transition:all .9s cubic-bezier(.2,.8,.2,1);
 }
-.ex-card:nth-child(2){animation-delay:.15s}
-.ex-card:nth-child(3){animation-delay:.3s}
-.ex-card:nth-child(4){animation-delay:.45s}
-
-@keyframes exEnter{
-  to{opacity:1;transform:translateY(0) scale(1)}
+.ex-card.show{
+  opacity:1;
+  transform:translateY(0) scale(1);
 }
-
 .ex-card img{
   width:100%;
   height:100%;
@@ -220,6 +225,8 @@ nav a:hover{opacity:1}
   </nav>
 </header>
 
+<div class="spacer"></div>
+
 <a href="carrito.html" class="cart">🛒</a>
 
 <section class="hero">
@@ -248,6 +255,20 @@ nav a:hover{opacity:1}
 </section>
 
 <div class="promo">🎁 -20% HOY</div>
+
+<script>
+/* EXCLUSIVE APPLE EFFECT */
+const cards = document.querySelectorAll('.ex-card');
+const observer = new IntersectionObserver(entries=>{
+  entries.forEach(entry=>{
+    if(entry.isIntersecting){
+      entry.target.classList.add('show');
+    }
+  });
+},{threshold:.25});
+
+cards.forEach(card=>observer.observe(card));
+</script>
 
 </body>
 </html>
