--- a/prendas.html
+++ b/prendas.html
@@ -2,95 +2,198 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
+<title>Prendas | Sistema Z</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Prendas | Miranda Flow</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700;800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
-*{margin:0;padding:0;box-sizing:border-box}
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+  -webkit-tap-highlight-color:transparent;
+}
+
 body{
-  font-family:'Inter',sans-serif;
+  font-family:'Inter',system-ui;
   background:#000;
   color:#fff;
+  overflow-x:hidden;
 }
 
-/* HEADER */
-header{
+/* ===== FONDO SISTEMA ===== */
+.bg{
   position:fixed;
-  top:0;
-  width:100%;
-  padding:18px 22px;
+  inset:-20%;
+  background:
+    radial-gradient(700px 500px at 25% 20%, rgba(255,255,255,.08), transparent 60%),
+    radial-gradient(700px 500px at 75% 70%, rgba(0,180,255,.08), transparent 65%);
+  filter:blur(24px);
+  z-index:-1;
+}
+
+/* ===== FLECHA LIMPIA ===== */
+.back{
+  position:fixed;
+  top:18px;
+  left:18px;
+  width:46px;
+  height:46px;
+  border-radius:14px;
+  background:rgba(255,255,255,.12);
+  backdrop-filter:blur(14px);
+  border:1px solid rgba(255,255,255,.25);
   display:flex;
   align-items:center;
-  justify-content:space-between;
-  background:rgba(0,0,0,.9);
-  z-index:100;
-}
-
-header a{
-  color:#fff;
+  justify-content:center;
   text-decoration:none;
+  color:#fff;
   font-size:20px;
+  z-index:50;
+  transition:.2s;
+}
+.back:hover{
+  background:rgba(255,255,255,.22);
+  transform:translateX(-2px);
 }
 
-/* CONTENT */
-.main{
-  padding:120px 20px 80px;
-}
-
-h1{
-  font-size:46px;
-  margin-bottom:10px;
-}
-
-p{
-  color:#aaa;
-  margin-bottom:40px;
-}
-
-/* CARDS */
-.cards{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-  gap:26px;
-}
-
-.card{
-  background:rgba(255,255,255,.05);
-  border-radius:24px;
-  padding:60px 20px;
+/* ===== HEADER ===== */
+header{
+  padding:90px 20px 60px;
   text-align:center;
-  font-size:22px;
+}
+
+header h1{
+  font-size:40px;
   font-weight:700;
-  letter-spacing:2px;
-  transition:.4s;
+  letter-spacing:.3px;
+}
+
+header p{
+  margin-top:14px;
+  font-size:15px;
+  color:rgba(255,255,255,.65);
+}
+
+/* ===== GRID PUERTAS ===== */
+.grid{
+  max-width:1100px;
+  margin:0 auto;
+  padding:20px;
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
+  gap:30px;
+}
+
+/* ===== TARJETAS ===== */
+.card{
+  position:relative;
+  height:300px;
+  border-radius:28px;
+  overflow:hidden;
+  cursor:pointer;
+  background:rgba(255,255,255,.06);
+  border:1px solid rgba(255,255,255,.16);
+  backdrop-filter:blur(18px);
+  transition:.4s cubic-bezier(.2,.8,.2,1);
+}
+
+.card::after{
+  content:'';
+  position:absolute;
+  inset:0;
+  background:linear-gradient(to top, rgba(0,0,0,.75), transparent 60%);
 }
 
 .card:hover{
-  transform:translateY(-8px);
-  background:rgba(255,255,255,.1);
+  transform:translateY(-10px) scale(1.02);
+  border-color:rgba(255,255,255,.35);
+}
+
+/* ===== TEXTO ===== */
+.label{
+  position:absolute;
+  bottom:24px;
+  left:24px;
+  z-index:2;
+}
+
+.label h3{
+  font-size:20px;
+  font-weight:600;
+}
+
+.label span{
+  display:block;
+  margin-top:6px;
+  font-size:13px;
+  color:rgba(255,255,255,.65);
+}
+
+/* ===== ANIMACIÓN ENTRADA ===== */
+.fade{
+  opacity:0;
+  transform:translateY(50px);
+  animation:fadeUp .7s ease forwards;
+}
+.fade:nth-child(2){animation-delay:.1s}
+.fade:nth-child(3){animation-delay:.2s}
+.fade:nth-child(4){animation-delay:.3s}
+
+@keyframes fadeUp{
+  to{opacity:1; transform:translateY(0)}
+}
+
+/* ===== RESPONSIVE ===== */
+@media(max-width:600px){
+  header h1{font-size:32px}
 }
 </style>
 </head>
 
 <body>
 
+<div class="bg"></div>
+
+<!-- Flecha Sistema Z -->
+<a href="index.html" class="back">←</a>
+
 <header>
-  <a href="index.html">←</a>
-  <a href="tienda.html">TIENDA</a>
+  <h1>Prendas</h1>
+  <p>Puertas de acceso al ecosistema Miranda Flow</p>
 </header>
 
-<section class="main">
-  <h1>PRENDAS</h1>
-  <p>Categorías que abren universos. Cada bloque es una puerta.</p>
+<section class="grid">
 
-  <div class="cards">
-    <div class="card">RELOJES</div>
-    <div class="card">CADENAS</div>
-    <div class="card">ANILLOS</div>
-    <div class="card">ACCESORIOS</div>
+  <div class="card fade" onclick="location.href='tienda.html'">
+    <div class="label">
+      <h3>Relojes</h3>
+      <span>Tiempo · Presencia</span>
+    </div>
   </div>
+
+  <div class="card fade" onclick="location.href='tienda.html'">
+    <div class="label">
+      <h3>Cadenas</h3>
+      <span>Detalle · Nivel</span>
+    </div>
+  </div>
+
+  <div class="card fade" onclick="location.href='tienda.html'">
+    <div class="label">
+      <h3>Anillos</h3>
+      <span>Firma personal</span>
+    </div>
+  </div>
+
+  <div class="card fade" onclick="location.href='tienda.html'">
+    <div class="label">
+      <h3>Accesorios</h3>
+      <span>Extensión del estilo</span>
+    </div>
+  </div>
+
 </section>
 
 </body>
