--- a/tienda.html
+++ b/tienda.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Tienda | Miranda Flow</title>
+<title>Tienda | Sistema Z</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -27,13 +27,13 @@ body{
   position:fixed;
   inset:-20%;
   background:
-    radial-gradient(700px 500px at 20% 20%, rgba(255,255,255,.08), transparent 60%),
-    radial-gradient(700px 500px at 80% 70%, rgba(0,255,200,.08), transparent 65%);
-  filter:blur(24px);
+    radial-gradient(800px 600px at 20% 20%, rgba(255,255,255,.07), transparent 60%),
+    radial-gradient(800px 600px at 80% 80%, rgba(0,200,255,.08), transparent 65%);
+  filter:blur(26px);
   z-index:-1;
 }
 
-/* ===== FLECHA LIMPIA (NO TEXTO) ===== */
+/* ===== FLECHA LIMPIA ===== */
 .back{
   position:fixed;
   top:18px;
@@ -60,14 +60,13 @@ body{
 
 /* ===== HEADER ===== */
 header{
-  padding:80px 20px 40px;
+  padding:90px 20px 40px;
   text-align:center;
 }
 
 header h1{
-  font-size:36px;
+  font-size:38px;
   font-weight:700;
-  letter-spacing:.5px;
 }
 
 header p{
@@ -76,68 +75,77 @@ header p{
   color:rgba(255,255,255,.65);
 }
 
-/* ===== GRID ===== */
+/* ===== GRID REAL ===== */
 .grid{
-  max-width:1100px;
+  max-width:1400px;
   margin:0 auto;
   padding:20px;
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+  grid-template-columns:repeat(4,1fr);
   gap:26px;
 }
 
-/* ===== TARJETAS ===== */
+/* ===== CARD ===== */
 .card{
   position:relative;
-  background:rgba(255,255,255,.08);
+  background:rgba(255,255,255,.07);
   border:1px solid rgba(255,255,255,.18);
   border-radius:26px;
   overflow:hidden;
   cursor:pointer;
-  backdrop-filter:blur(16px);
-  transition:.3s;
+  backdrop-filter:blur(18px);
+  transition:.35s cubic-bezier(.2,.8,.2,1);
 }
 
 .card:hover{
-  transform:translateY(-6px);
+  transform:translateY(-8px);
   border-color:rgba(255,255,255,.35);
 }
 
 .card img{
   width:100%;
-  height:260px;
+  height:240px;
   object-fit:cover;
   display:block;
 }
 
-.card .info{
+/* INFO */
+.info{
   padding:18px;
 }
 
-.card h3{
-  font-size:18px;
+.info h3{
+  font-size:17px;
   font-weight:600;
 }
 
-.card span{
+.info span{
   display:block;
   margin-top:6px;
   font-size:13px;
   color:rgba(255,255,255,.6);
 }
 
-/* ===== EFECTO ENTRADA ===== */
+/* ===== ANIMACIÓN ENTRADA ===== */
 .fade{
+  opacity:0;
+  transform:translateY(40px);
   animation:fadeUp .6s ease forwards;
 }
 
 @keyframes fadeUp{
-  from{opacity:0; transform:translateY(30px)}
   to{opacity:1; transform:translateY(0)}
 }
 
 /* ===== RESPONSIVE ===== */
-@media(max-width:600px){
+@media(max-width:1200px){
+  .grid{grid-template-columns:repeat(3,1fr);}
+}
+@media(max-width:900px){
+  .grid{grid-template-columns:repeat(2,1fr);}
+}
+@media(max-width:520px){
+  .grid{grid-template-columns:1fr;}
   header h1{font-size:30px}
 }
 </style>
@@ -147,45 +155,79 @@ header p{
 
 <div class="bg"></div>
 
-<!-- Flecha: vuelve al index (Sistema Z) -->
+<!-- Flecha Sistema Z -->
 <a href="index.html" class="back">←</a>
 
 <header>
   <h1>Tienda</h1>
-  <p>Explora piezas del ecosistema Miranda Flow</p>
+  <p>Ecosistema visual · Selección Sistema Z</p>
 </header>
 
 <section class="grid">
 
+  <!-- FILA 1 -->
   <div class="card fade" onclick="location.href='producto.html'">
-    <img src="exclusive-1.jpg" alt="">
+    <img src="exclusive-1.jpg">
     <div class="info">
-      <h3>Pieza Exclusiva</h3>
+      <h3>Pieza Z-01</h3>
+      <span>Acceso interno</span>
+    </div>
+  </div>
+
+  <div class="card fade" style="animation-delay:.05s" onclick="location.href='producto.html'">
+    <img src="exclusive-2.jpg">
+    <div class="info">
+      <h3>Pieza Z-02</h3>
       <span>Edición limitada</span>
     </div>
   </div>
 
   <div class="card fade" style="animation-delay:.1s" onclick="location.href='producto.html'">
-    <img src="exclusive-2.jpg" alt="">
+    <img src="exclusive-3.jpg">
     <div class="info">
-      <h3>Colección Selecta</h3>
-      <span>Presencia · Nivel</span>
+      <h3>Pieza Z-03</h3>
+      <span>Drop visual</span>
     </div>
   </div>
 
-  <div class="card fade" style="animation-delay:.2s" onclick="location.href='producto.html'">
-    <img src="exclusive-3.jpg" alt="">
+  <div class="card fade" style="animation-delay:.15s" onclick="location.href='producto.html'">
+    <img src="exclusive-4.jpg">
     <div class="info">
-      <h3>Drop Visual</h3>
-      <span>Demo del ecosistema</span>
+      <h3>Pieza Z-04</h3>
+      <span>Sistema Z</span>
+    </div>
+  </div>
+
+  <!-- FILA 2 -->
+  <div class="card fade" style="animation-delay:.2s" onclick="location.href='producto.html'">
+    <img src="exclusive-1.jpg">
+    <div class="info">
+      <h3>Pieza Z-05</h3>
+      <span>Selección premium</span>
+    </div>
+  </div>
+
+  <div class="card fade" style="animation-delay:.25s" onclick="location.href='producto.html'">
+    <img src="exclusive-2.jpg">
+    <div class="info">
+      <h3>Pieza Z-06</h3>
+      <span>Acceso curado</span>
     </div>
   </div>
 
   <div class="card fade" style="animation-delay:.3s" onclick="location.href='producto.html'">
-    <img src="exclusive-4.jpg" alt="">
+    <img src="exclusive-3.jpg">
     <div class="info">
-      <h3>Pieza Sistema Z</h3>
-      <span>Acceso interno</span>
+      <h3>Pieza Z-07</h3>
+      <span>Nivel interno</span>
+    </div>
+  </div>
+
+  <div class="card fade" style="animation-delay:.35s" onclick="location.href='producto.html'">
+    <img src="exclusive-4.jpg">
+    <div class="info">
+      <h3>Pieza Z-08</h3>
+      <span>Ecosistema</span>
     </div>
   </div>
 
