--- a/tienda.html
+++ b/tienda.html
@@ -1,271 +1,255 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Tienda | Miranda Flow</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<title>Tienda | Miranda Flow</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
+<!-- Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
 
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
+<style>
+*{margin:0;padding:0;box-sizing:border-box}
 
-    body {
-      font-family: 'Inter', sans-serif;
-      background: #f6f2ec;
-      color: #111;
-    }
+body{
+  font-family:'Inter',sans-serif;
+  background:#f7f7f5;
+  color:#111;
+}
 
-    a {
-      text-decoration: none;
-      color: inherit;
-    }
+/* HEADER */
+header{
+  position:sticky;
+  top:0;
+  z-index:10;
+  background:rgba(247,247,245,.9);
+  backdrop-filter:blur(10px);
+  border-bottom:1px solid rgba(0,0,0,.06);
+}
+.nav{
+  max-width:1200px;
+  margin:auto;
+  padding:20px 26px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+}
+.brand{
+  display:flex;
+  align-items:center;
+  gap:14px;
+  font-family:'Playfair Display',serif;
+  font-size:20px;
+}
+.brand img{
+  width:36px;
+  height:36px;
+  border-radius:10px;
+  filter:grayscale(100%);
+}
+.nav a{
+  margin-left:26px;
+  font-size:13px;
+  letter-spacing:.14em;
+  text-transform:uppercase;
+  color:#111;
+}
 
-    /* ===== HEADER ===== */
-    header {
-      position: sticky;
-      top: 0;
-      z-index: 10;
-      background: rgba(246,242,236,0.9);
-      backdrop-filter: blur(10px);
-      border-bottom: 1px solid rgba(0,0,0,0.05);
-    }
+/* BACK */
+.back{
+  position:fixed;
+  top:92px;
+  left:22px;
+  width:46px;
+  height:46px;
+  border-radius:50%;
+  background:rgba(0,0,0,.06);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-size:20px;
+  cursor:pointer;
+  transition:.3s;
+  z-index:5;
+}
+.back:hover{transform:translateX(-4px)}
 
-    .nav {
-      max-width: 1200px;
-      margin: auto;
-      padding: 18px 24px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
+/* HERO */
+.hero{
+  max-width:1200px;
+  margin:auto;
+  padding:120px 26px 70px;
+}
+.hero h1{
+  font-family:'Playfair Display',serif;
+  font-size:52px;
+  margin-bottom:20px;
+}
+.hero p{
+  max-width:520px;
+  line-height:1.7;
+  color:#333;
+}
 
-    .brand {
-      display: flex;
-      align-items: center;
-      gap: 14px;
-      font-family: 'Playfair Display', serif;
-      font-size: 20px;
-      font-weight: 600;
-    }
+/* CATEGORY GRID */
+.grid{
+  max-width:1200px;
+  margin:auto;
+  padding:20px 26px 120px;
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+  gap:30px;
+}
 
-    .brand img {
-      width: 38px;
-      height: 38px;
-      border-radius: 10px;
-    }
+/* CARDS */
+.card{
+  background:#fff;
+  border-radius:26px;
+  padding:46px 20px;
+  text-align:center;
+  box-shadow:0 30px 60px rgba(0,0,0,.08);
+  cursor:pointer;
+  transition:.45s ease;
+}
+.card:hover{
+  transform:translateY(-8px);
+  box-shadow:0 45px 90px rgba(0,0,0,.14);
+}
+.card h3{
+  font-family:'Playfair Display',serif;
+  font-size:22px;
+  font-weight:500;
+}
 
-    .nav-links {
-      display: flex;
-      gap: 26px;
-      font-size: 14px;
-      letter-spacing: 0.08em;
-      text-transform: uppercase;
-    }
+/* PRODUCTS VIEW */
+.products{
+  display:none;
+  animation:fadeUp .6s ease forwards;
+}
+.products h2{
+  font-family:'Playfair Display',serif;
+  font-size:42px;
+  margin-bottom:40px;
+}
+.product-grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
+  gap:30px;
+}
+.product{
+  background:#fff;
+  height:300px;
+  border-radius:26px;
+  box-shadow:0 30px 60px rgba(0,0,0,.08);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-size:14px;
+  letter-spacing:.12em;
+  text-transform:uppercase;
+  color:#777;
+  transition:.4s;
+}
+.product:hover{
+  transform:translateY(-6px);
+  box-shadow:0 40px 80px rgba(0,0,0,.12);
+}
 
-    /* ===== BACK BUTTON ===== */
-    .back-btn {
-      position: fixed;
-      top: 90px;
-      left: 20px;
-      width: 44px;
-      height: 44px;
-      border-radius: 50%;
-      background: rgba(0,0,0,0.08);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 20px;
-      transition: all .3s ease;
-      z-index: 20;
-    }
+/* ANIMATIONS */
+@keyframes fadeUp{
+  from{opacity:0;transform:translateY(30px)}
+  to{opacity:1;transform:translateY(0)}
+}
 
-    .back-btn:hover {
-      background: rgba(0,0,0,0.15);
-      transform: translateX(-3px);
-    }
-
-    /* ===== HERO ===== */
-    .hero {
-      max-width: 1200px;
-      margin: auto;
-      padding: 80px 24px 40px;
-    }
-
-    .hero h1 {
-      font-family: 'Playfair Display', serif;
-      font-size: 52px;
-      font-weight: 600;
-      margin-bottom: 16px;
-    }
-
-    .hero p {
-      max-width: 520px;
-      font-size: 16px;
-      line-height: 1.6;
-      color: #444;
-    }
-
-    /* ===== CATEGORIES ===== */
-    .categories {
-      max-width: 1200px;
-      margin: auto;
-      padding: 40px 24px;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-      gap: 20px;
-    }
-
-    .category {
-      background: #fff;
-      border-radius: 20px;
-      padding: 26px;
-      text-align: center;
-      font-family: 'Playfair Display', serif;
-      font-size: 18px;
-      transition: all .35s ease;
-      cursor: pointer;
-      box-shadow: 0 20px 40px rgba(0,0,0,0.06);
-    }
-
-    .category:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 30px 60px rgba(0,0,0,0.12);
-    }
-
-    /* ===== PRODUCTS GRID ===== */
-    .products {
-      max-width: 1200px;
-      margin: auto;
-      padding: 60px 24px 100px;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 28px;
-    }
-
-    .card {
-      background: #fff;
-      border-radius: 26px;
-      padding: 20px;
-      box-shadow: 0 20px 50px rgba(0,0,0,0.08);
-      transition: all .4s ease;
-      opacity: 0;
-      transform: translateY(40px);
-      animation: fadeUp .8s forwards;
-    }
-
-    .card:nth-child(2) { animation-delay: .1s; }
-    .card:nth-child(3) { animation-delay: .2s; }
-    .card:nth-child(4) { animation-delay: .3s; }
-    .card:nth-child(5) { animation-delay: .4s; }
-
-    @keyframes fadeUp {
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    .card img {
-      width: 100%;
-      border-radius: 18px;
-      margin-bottom: 16px;
-    }
-
-    .card h3 {
-      font-family: 'Playfair Display', serif;
-      font-size: 18px;
-      margin-bottom: 6px;
-    }
-
-    .card span {
-      font-size: 13px;
-      color: #777;
-      letter-spacing: 0.08em;
-      text-transform: uppercase;
-    }
-
-    /* ===== FOOTER SPACE ===== */
-    footer {
-      height: 80px;
-    }
-
-    /* ===== RESPONSIVE ===== */
-    @media (max-width: 600px) {
-      .hero h1 {
-        font-size: 38px;
-      }
-    }
-  </style>
+.fade{
+  position:fixed;
+  bottom:0;
+  left:0;
+  right:0;
+  height:120px;
+  background:linear-gradient(to top,#f7f7f5,transparent);
+  pointer-events:none;
+}
+</style>
 </head>
+
 <body>
 
-  <!-- BACK -->
-  <a href="index.html" class="back-btn">←</a>
+<!-- BACK -->
+<div class="back" onclick="goBack()">←</div>
 
-  <!-- HEADER -->
-  <header>
-    <div class="nav">
-      <div class="brand">
-        <img src="logo.jpg" alt="Miranda Flow">
-        Miranda Flow
-      </div>
-      <nav class="nav-links">
-        <a href="index.html">Inicio</a>
-        <a href="carrito.html">Carrito</a>
-      </nav>
+<header>
+  <div class="nav">
+    <div class="brand">
+      <img src="logo.jpg">
+      Miranda Flow
     </div>
-  </header>
+    <div>
+      <a href="index.html">Inicio</a>
+      <a href="carrito.html">Carrito</a>
+    </div>
+  </div>
+</header>
 
-  <!-- HERO -->
-  <section class="hero">
+<!-- MAIN VIEW -->
+<section id="main">
+  <div class="hero">
     <h1>Tienda</h1>
     <p>
       No es una tienda tradicional.  
       Es una extensión del ecosistema Miranda Flow.  
-      Cada sección representa una colección, una presencia, un nivel.
+      Cada sección representa una presencia y un nivel.
     </p>
-  </section>
+  </div>
 
-  <!-- CATEGORIES -->
-  <section class="categories">
-    <div class="category">Hoodies</div>
-    <div class="category">Pantalones</div>
-    <div class="category">Pullovers</div>
-    <div class="category">Conjuntos</div>
-    <div class="category">Shorts</div>
-  </section>
+  <div class="grid">
+    <div class="card" onclick="openCategory('Hoodies')"><h3>Hoodies</h3></div>
+    <div class="card" onclick="openCategory('Pantalones')"><h3>Pantalones</h3></div>
+    <div class="card" onclick="openCategory('Pullovers')"><h3>Pullovers</h3></div>
+    <div class="card" onclick="openCategory('Conjuntos')"><h3>Conjuntos</h3></div>
+    <div class="card" onclick="openCategory('Shorts')"><h3>Shorts</h3></div>
+  </div>
+</section>
 
-  <!-- PRODUCTS (MAQUETA) -->
-  <section class="products">
-    <div class="card">
-      <img src="exclusive-1.jpg" alt="">
-      <h3>Pieza Conceptual</h3>
-      <span>Miranda Flow</span>
+<!-- PRODUCTS VIEW -->
+<section id="products" class="products">
+  <div class="hero">
+    <h2 id="catTitle"></h2>
+    <div class="product-grid">
+      <div class="product">Producto</div>
+      <div class="product">Producto</div>
+      <div class="product">Producto</div>
+      <div class="product">Producto</div>
+      <div class="product">Producto</div>
+      <div class="product">Producto</div>
+      <div class="product">Producto</div>
+      <div class="product">Producto</div>
     </div>
-    <div class="card">
-      <img src="exclusive-2.jpg" alt="">
-      <h3>Edición Selecta</h3>
-      <span>Próximamente</span>
-    </div>
-    <div class="card">
-      <img src="exclusive-3.jpg" alt="">
-      <h3>Drop Ecosistema</h3>
-      <span>Demo Visual</span>
-    </div>
-    <div class="card">
-      <img src="exclusive-4.jpg" alt="">
-      <h3>Colección Nivel</h3>
-      <span>Concepto</span>
-    </div>
-  </section>
+  </div>
+</section>
 
-  <footer></footer>
+<div class="fade"></div>
+
+<script>
+let inCategory = false;
+
+function openCategory(name){
+  document.getElementById('main').style.display='none';
+  document.getElementById('products').style.display='block';
+  document.getElementById('catTitle').innerText=name;
+  inCategory = true;
+}
+
+function goBack(){
+  if(inCategory){
+    document.getElementById('products').style.display='none';
+    document.getElementById('main').style.display='block';
+    inCategory = false;
+  }else{
+    window.location.href='index.html';
+  }
+}
+</script>
 
 </body>
 </html>
